frame/support/test/tests/derive_no_bound_ui/default.stderr
error[E0277]: the trait bound `<T as Config>::C: std::default::Default` is not satisfied
 --> tests/derive_no_bound_ui/default.rs:7:2
  |
7 |     c: T::C,
  |     ^ the trait `std::default::Default` is not implemented for `<T as Config>::C`
