frame/support/test/tests/derive_no_bound_ui/default.rs
trait Config {
	type C;
}

#[derive(frame_support::DefaultNoBound)]
struct Foo<T: Config> {
	c: T::C,
}

fn main() {}
